@@ -1,5 +1,5 @@
-# Используем официальный образ Maven для сборки на Java 17
-FROM maven:3.8.4-openjdk-17-slim AS builder
+# Используем официальный образ Maven для сборки на Java 25
+FROM eclipse-temurin:25-jdk AS builder
 
 # Копируем файлы проекта
 WORKDIR /app
@@ -9,19 +9,19 @@ COPY src ./src
 # Собираем проект
 RUN mvn clean package -DskipTests
 
-# Минимальный образ JRE 17 для запуска
-FROM eclipse-temurin:17-jre
+# Минимальный образ JRE 25 для запуска
+FROM eclipse-temurin:25-jre
 
 # Создаем рабочую директорию
 WORKDIR /app
 
 # Копируем собранный jar из предыдущего этапа
-COPY --from=builder /app/target/DiscordjBot-jar-with-dependencies.jar ./bot.jar
+COPY --from=builder /app/target/DiscordjBot-jar-with-dependencies.jar app.jar
 
 # Создаем директорию для конфигурации
 RUN mkdir -p /app/json
 
 # Запускаем бота
-CMD ["java", "-jar", "bot.jar"]
+ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "-jar", "app.jar"]
 
 
